fixed alignment for tablet layout

--- a/templates/modern/css/resume.css
+++ b/templates/modern/css/resume.css
@@ -102,7 +102,7 @@ h3+ul {
     padding: 0;
     list-style: none;
     display: table;
-    width: 642px;
+    width: 79%;
     text-align: left;
 
 
@@ -167,7 +167,7 @@ ol li:nth-child(1) {
 
 dl {
     display: inline-block;
-    width: 78%;
+    width: 79%;
     margin: 0;
     padding: 0;
     dt {
